--- a/source/sass/components/gallery.scss
+++ b/source/sass/components/gallery.scss
@@ -74,12 +74,12 @@
 .gallery__item--4 {
   &::after {
     content: "";
-    width: 100%;
+    width: 114%;
     height: 1px;
     background-color: $gray5;
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: -20px;
 
     @media (min-width: $tablet-width) {
       display: none;
