--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -13,8 +13,6 @@
 
   background-color: $blue;
 
-  display: none;
-
   @media (min-width: $tablet-width) {
     background-color: $white;
 
@@ -117,7 +115,7 @@
     content: "";
     width: 100%;
     height: 7px;
-    background: $blue linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+    background-color: $blue linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
     position: absolute;
     bottom: 0;
     left: 0;
@@ -129,7 +127,7 @@
 
   @media (min-width: $tablet-width) {
     padding-right: 29px;
-    background: none;
+    background-color: none;
     box-shadow: none;
   }
 
@@ -209,7 +207,7 @@
   opacity: 30%;
 }
 
-.main-nav--opend .main-nav__toggle {
+.main-nav--opened .main-nav__toggle {
   top: 10px;
   right: 0;
   z-index: 100;
@@ -235,3 +233,11 @@
     box-shadow: none;
   }
 }
+
+// .main-nav--opend .main-nav__list {
+//   display: block;
+// }
+
+// .main-nav--closed .main-nav__list {
+//   display: none;
+// }
