--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -234,6 +234,17 @@
   }
 }
 
+.main-nav--opened .main-nav__toggle:hover::before,
+.main-nav--opened .main-nav__toggle:hover::after {
+  opacity: 60%;
+}
+
+.main-nav--opened .main-nav__toggle:active::before,
+.main-nav--opened .main-nav__toggle:active::after {
+  opacity: 30%;
+}
+
+
 // .main-nav--opend .main-nav__list {
 //   display: block;
 // }
