add js for main-nav

--- a/source/sass/components/map.scss
+++ b/source/sass/components/map.scss
@@ -28,4 +28,12 @@
 .map__img {
   width: 100%;
   position: absolute;
+  top: 0;
+  left: 0;
+
+}
+
+.map__iframe {
+  position: relative;
+  z-index: 300;
 }
