--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -1,17 +1,28 @@
 .main-nav {
   width: 100%;
+  position: relative;
 }
 
 .main-nav__list {
-  width: 100%;
-  text-align: center;
+  display: none;
 
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 3;
+  &--opened {
+    text-align: center;
+    width: 100%;
 
-  background-color: $blue;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+
+    background-color: $blue;
+  }
+
+  &--nojs {
+    background-color: $blue;
+    display: block;
+    padding-top: 56px;
+  }
 
   @media (min-width: $tablet-width) {
     background-color: $white;
@@ -188,7 +199,18 @@
   }
 }
 
-.main-nav--closed .main-nav__toggle::before {
+// .main-nav--closed .main-nav__toggle::before {
+//   content: "";
+//   position: absolute;
+//   top: -15px;
+//   right: 10px;
+//   width: 23px;
+//   height: 4px;
+//   background-color: $blue;
+//   box-shadow: 0 8px 0 0 $blue, 0 16px 0 0 $blue;
+// }
+
+.main-nav__toggle::before {
   content: "";
   position: absolute;
   top: -15px;
@@ -197,17 +219,25 @@
   height: 4px;
   background-color: $blue;
   box-shadow: 0 8px 0 0 $blue, 0 16px 0 0 $blue;
+
+  &--nojs {
+    display: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
 }
 
-.main-nav--closed .main-nav__toggle:hover::before {
+.main-nav__toggle:hover::before {
   opacity: 60%;
 }
 
-.main-nav--closed .main-nav__toggle:active::before {
+.main-nav__toggle:active::before {
   opacity: 30%;
 }
 
-.main-nav--opened .main-nav__toggle {
+.main-nav__toggle--opened {
   top: 10px;
   right: 0;
   z-index: 100;
@@ -234,21 +264,13 @@
   }
 }
 
-.main-nav--opened .main-nav__toggle:hover::before,
-.main-nav--opened .main-nav__toggle:hover::after {
+.main-nav__list--opened .main-nav__toggle:hover::before,
+.main-nav__list--opened .main-nav__toggle:hover::after {
   opacity: 60%;
 }
 
-.main-nav--opened .main-nav__toggle:active::before,
-.main-nav--opened .main-nav__toggle:active::after {
+.main-nav__list--opened .main-nav__toggle:active::before,
+.main-nav__list--opened .main-nav__toggle:active::after {
   opacity: 30%;
 }
 
-
-// .main-nav--opend .main-nav__list {
-//   display: block;
-// }
-
-// .main-nav--closed .main-nav__list {
-//   display: none;
-// }
