--- a/source/sass/components/benefits.scss
+++ b/source/sass/components/benefits.scss
@@ -58,7 +58,7 @@
   &::before {
     content: "";
     position: absolute;
-    top: -9px;
+    top: -4px;
     left: 5px;
     width: 40px;
     height: 38px;
@@ -88,7 +88,7 @@
   &::before {
     content: "";
     position: absolute;
-    top: -3px;
+    top: 0;
     left: -2px;
     width: 40px;
     height: 38px;
@@ -154,7 +154,7 @@
 }
 
 .benefits__item--presents .benefits__title {
-  padding-top: 3px;
+  padding-top: 5px;
 
   @media (min-width: $tablet-width) {
     padding-top: 27px;
@@ -169,7 +169,7 @@
 }
 
 .benefits__item--food .benefits__title {
-  padding-top: 15px;
+  padding-top: 7px;
 
   @media (min-width: $tablet-width) {
     padding-top: 27px;
@@ -188,8 +188,8 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 2px;
-    padding-left: 28px;
-    padding-right: 29px;
+    padding-left: 9px;
+    padding-right: 42px;
   }
 
   @media (min-width: $desktop-width) {
@@ -215,14 +215,15 @@
 .benefits__item--presents .benefits__text {
   margin: 0;
 
+
   @media (min-width: $tablet-width) {
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 41px;
+    padding-right: 9px;
   }
 
   @media (min-width: $desktop-width) {
     padding-top: 1px;
-    padding-left: 78px;
-    padding-right: 78px;
+    padding-left: 93px;
+    padding-right: 69px;
   }
 }
