--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -7,6 +7,7 @@
   display: none;
 
   &--opened {
+    display: block;
     text-align: center;
     width: 100%;
 
@@ -21,7 +22,6 @@
   &--nojs {
     background-color: $blue;
     display: block;
-    padding-top: 56px;
   }
 
   @media (min-width: $tablet-width) {
