--- a/source/sass/components/map.scss
+++ b/source/sass/components/map.scss
@@ -30,10 +30,11 @@
   position: absolute;
   top: 0;
   left: 0;
-
 }
 
 .map__iframe {
   position: relative;
   z-index: 300;
+  width: 100%;
+  height: 350px;
 }
