--- a/source/sass/layout/form.scss
+++ b/source/sass/layout/form.scss
@@ -10,7 +10,7 @@
   border: 0;
   padding: 0;
   position: relative;
-  margin-bottom: 7px;
+  margin-bottom: 13px;
 
   &::before {
     content: "";
@@ -33,7 +33,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 18px;
+    padding-top: 37px;
   }
 }
 
@@ -74,7 +74,7 @@
     height: 1px;
     background-color: $gray5;
     position: absolute;
-    top: -5px;
+    top: 13px;
     left: -22px;
 
     @media (min-width: $tablet-width) {
@@ -145,7 +145,11 @@
     grid-column: 1 / 3;
     grid-row: 4 / 5;
 
-    padding-top: 18px;
+    padding-top: 10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 15px;
   }
 }
 
@@ -164,7 +168,8 @@
   }
 }
 
-.form__subtitle--special {
+.form__subtitle--special,
+.form__subtitle--special-visited {
   @media (min-width: $tablet-width) {
     position: relative;
     z-index: 1;
@@ -203,10 +208,14 @@
 }
 
 .form__user-info .form__subtitle {
+  margin: 0;
+  padding-top: 14px;
+  padding-bottom: 17px;
+
   @media (min-width: $tablet-width) {
     text-align: left;
     padding-left: 55px;
-    padding-top: 21px;
+    padding-top: 41px;
   }
 
   @media (min-width: $desktop-width) {
@@ -242,11 +251,14 @@
   @media (min-width: $tablet-width) {
     width: 324px;
     margin-bottom: 61px;
+    padding-right: 15px;
+    padding-top: 5px;
   }
 
   @media (min-width: $desktop-width) {
     width: 480px;
     margin-bottom: 66px;
+    padding-right: 7px;
   }
 }
 
