--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -1,6 +1,14 @@
 .main-nav {
   width: 100%;
   position: relative;
+
+  &--nojs {
+    z-index: 10;
+
+    @media (min-width: $tablet-width) {
+      z-index: 0;
+    }
+  }
 }
 
 .main-nav__list {
@@ -22,6 +30,8 @@
   &--nojs {
     background-color: $blue;
     display: block;
+    text-align: center;
+    position: static;
   }
 
   @media (min-width: $tablet-width) {
@@ -193,22 +203,16 @@
   position: absolute;
   top: 32px;
   right: 10px;
+  z-index: 2;
 
   @media (min-width: $tablet-width) {
     display: none;
   }
-}
 
-// .main-nav--closed .main-nav__toggle::before {
-//   content: "";
-//   position: absolute;
-//   top: -15px;
-//   right: 10px;
-//   width: 23px;
-//   height: 4px;
-//   background-color: $blue;
-//   box-shadow: 0 8px 0 0 $blue, 0 16px 0 0 $blue;
-// }
+  // &--nojs {
+  //   display: none;
+  // }
+}
 
 .main-nav__toggle::before {
   content: "";
