fix small mistakes д13

--- a/source/sass/components/reason-card.scss
+++ b/source/sass/components/reason-card.scss
@@ -10,7 +10,7 @@
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 2fr;
-    height: 256px;
+    min-height: 256px;
   }
 }
 
