--- a/source/sass/components/map.scss
+++ b/source/sass/components/map.scss
@@ -1,5 +1,15 @@
 .map {
   position: relative;
+  min-height: 350px;
+
+  background-image: url("../img/map-mobile.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/map-mobile@2x.jpg");
+    background-size: 100%;
+  }
 
   &::after {
     content: "";
@@ -21,6 +31,26 @@
     @media (min-width: $desktop-width) {
       top: 162px;
       left: 586px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    background-image: url("../img/map-tablet.jpg");
+    background-size: 100%;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/map-tablet@2x.jpg");
+      background-size: 100%;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: url("../img/map-desktop.jpg");
+    background-size: 100%;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/map-desktop@2x.jpg");
+      background-size: 100%;
     }
   }
 }
