--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -100,17 +100,15 @@
 }
 
 .promo__description {
-  margin-left: 17px;
-  margin-right: 18px;
+  width: 285px;
+  margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    margin-left: 124px;
-    margin-right: 124px;
+    width: 520px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 357px;
-    margin-right: 359px;
+    width: 490px;
   }
 }
 
