--- a/source/sass/components/gallery.scss
+++ b/source/sass/components/gallery.scss
@@ -1,5 +1,5 @@
 .gallery {
-  padding-top: 26px;
+  padding-top: 30px;
 
   @media (min-width: $tablet-width) {
     padding-top: 56px;
@@ -38,13 +38,13 @@
 }
 
 .gallery__item {
-  margin-bottom: 22px;
+  margin-bottom: 24px;
 
   position: relative;
 
   &::before {
     content: "";
-    width: 114%;
+    width: 100vw;
     height: 1px;
     background-color: $gray5;
     position: absolute;
@@ -87,72 +87,72 @@
   }
 }
 
-.gallery__item--2 .gallery-card__button {
-  @media (min-width: $tablet-width) {
-    padding-right: 4px;
-  }
+// .gallery__item--2 .gallery-card__button {
+//   @media (min-width: $tablet-width) {
+//     padding-right: 4px;
+//   }
 
-  @media (min-width: $desktop-width) {
-    padding-right: 6px;
-  }
-}
+//   @media (min-width: $desktop-width) {
+//     padding-right: 6px;
+//   }
+// }
 
-.gallery__item--3 .gallery-card__button {
-  @media (min-width: $tablet-width) {
-    padding-right: 5px;
-  }
-}
+// .gallery__item--3 .gallery-card__button {
+//   @media (min-width: $tablet-width) {
+//     padding-right: 5px;
+//   }
+// }
 
-.gallery__item--4 .gallery-card__button {
-  @media (min-width: $tablet-width) {
-    padding-right: 4px;
-  }
-}
+// .gallery__item--4 .gallery-card__button {
+//   @media (min-width: $tablet-width) {
+//     padding-right: 4px;
+//   }
+// }
 
-.gallery__item--1 .gallery-card__number {
-  padding-left: 6px;
+// .gallery__item--1 .gallery-card__number {
+//   padding-left: 6px;
 
-  @media (min-width: $tablet-width) {
-    padding: 0;
-  }
+//   @media (min-width: $tablet-width) {
+//     padding: 0;
+//   }
 
-  @media (min-width: $desktop-width) {
-    padding-right: 0;
-  }
-}
+//   @media (min-width: $desktop-width) {
+//     padding-right: 0;
+//   }
+// }
 
-.gallery__item--2 .gallery-card__number {
-  padding-left: 6px;
+// .gallery__item--2 .gallery-card__number {
+//   padding-left: 6px;
 
-  @media (min-width: $tablet-width) {
-    padding-left: 0;
-  }
+//   @media (min-width: $tablet-width) {
+//     padding-left: 0;
+//   }
 
-  @media (min-width: $desktop-width) {
-    padding-right: 8px;
-  }
-}
+//   @media (min-width: $desktop-width) {
+//     padding-right: 8px;
+//   }
+// }
 
-.gallery__item--3 .gallery-card__number {
-  padding-left: 6px;
+// .gallery__item--3 .gallery-card__number {
+//   padding-left: 6px;
 
-  @media (min-width: $tablet-width) {
-    padding-left: 0;
-  }
+//   @media (min-width: $tablet-width) {
+//     padding-left: 0;
+//   }
 
-  @media (min-width: $tablet-width) {
-    padding-right: 16px;
-  }
-}
+//   @media (min-width: $tablet-width) {
+//     padding-right: 16px;
+//   }
+// }
 
-.gallery__item--4 .gallery-card__number {
-  padding-left: 6px;
+// .gallery__item--4 .gallery-card__number {
+//   padding-left: 6px;
 
-  @media (min-width: $tablet-width) {
-    padding-left: 0;
-  }
+//   @media (min-width: $tablet-width) {
+//     padding-left: 0;
+//   }
 
-  @media (min-width: $desktop-width) {
-    padding-right: 9px;
-  }
-}
+//   @media (min-width: $desktop-width) {
+//     padding-right: 9px;
+//   }
+// }
