--- a/source/sass/components/user-info.scss
+++ b/source/sass/components/user-info.scss
@@ -15,10 +15,13 @@
 
 .user-info__item {
   margin-bottom: 20px;
+  display: flex;
+  align-items: center;
 }
 
 .user-info__label {
   padding-right: 7px;
+  padding-top: 9px;
 
   font-weight: 400;
   font-size: 14px;
@@ -28,16 +31,21 @@
   color: $darkGray;
 
   @media (min-width: $tablet-width) {
-    padding-left: 7px;
+    padding-left: 58px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 79px;
   }
 }
 
 .user-info__input {
-  width: 192px;
   height: 58px;
   padding-top: 23px;
   padding-bottom: 14px;
-  padding-left: 21px;
+  padding-left: 25px;
+
+  flex-grow: 1;
   cursor: pointer;
 
   border: none;
@@ -77,17 +85,5 @@
 
   @media (min-width: $desktop-width) {
     width: 314px;
-  }
-}
-
-.user-info__input--large {
-  width: 230px;
-
-  @media (min-width: $tablet-width) {
-    width: 216px;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 350px;
   }
 }
