--- a/source/sass/components/intro.scss
+++ b/source/sass/components/intro.scss
@@ -40,55 +40,53 @@
 
   background-color: $blue-hover;
   background-image: url("../img/back-intro-mobile.jpg");
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: right 0 top -51px;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/back-intro-mobile@2x.jpg");
-    background-size: 320px;
+    background-repeat: no-repeat;
   }
 
   @media (min-width: $tablet-width) {
     padding-top: 95px;
-    padding-left: 157px;
-    padding-right: 150px;
     margin-bottom: 62px;
 
     min-height: 290px;
     background-image: url("../img/back-intro-tablet.jpg");
-    background-size: 100%;
     background-repeat: no-repeat;
     background-position: right 0 top -51px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/back-intro-tablet@2x.jpg");
-      background-size: 758px;
+      background-repeat: no-repeat;
     }
   }
 
   @media (min-width: $desktop-width) {
     min-height: 301px;
     padding-top: 100px;
-    padding-left: 370px;
-    padding-right: 370px;
     margin-bottom: 112px;
-
-    width: 100%;
 
     background-image: url("../img/back-intro-desktop.jpg");
     background-repeat: no-repeat;
-    background-size: 1200px;
     background-position: right 0 top -46px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/back-intro-desktop@2x.jpg");
-      background-size: 1200px;
+      background-repeat: no-repeat;
     }
   }
 }
 
 .intro__inner--special {
+  margin-bottom: 33px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 62px;
+  }
+
   @media (min-width: $desktop-width) {
     margin-bottom: 100px;
   }
@@ -97,6 +95,8 @@
 .intro__img {
   width: 100%;
   height: 39px;
+  margin: 0 auto;
+  display: block;
 
   @media (min-width: $tablet-width) {
     width: 457px;
@@ -164,7 +164,8 @@
 
 .intro__text--special {
   margin: 0;
-  padding-bottom: 18px;
+  padding-bottom: 16px;
+  padding-top: 2px;
 
   @media (min-width: $tablet-width) {
     padding-top: 10px;
