--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -42,8 +42,6 @@
   height: 389px;
   width: 100%;
   padding-top: 90px;
-  padding-left: 20px;
-  padding-right: 20px;
   background-color: $blue-hover;
   background-image: url("../img/back-mobile.jpg");
   background-size: cover;
@@ -57,8 +55,6 @@
   @media (min-width: $tablet-width) {
     height: 518px;
     padding-top: 77px;
-    padding-left: 154px;
-    padding-right: 153px;
     background-image: url("../img/back-tablet.jpg");
     background-repeat: no-repeat;
 
@@ -70,8 +66,6 @@
 
   @media (min-width: $desktop-width) {
     padding-top: 78px;
-    padding-left: 370px;
-    padding-right: 370px;
     height: 518px;
     background-image: url("../img/back-desktop.jpg");
     background-repeat: no-repeat;
@@ -87,6 +81,8 @@
 .promo__img {
   width: 100%;
   height: 214px;
+  margin: 0 auto;
+  display: block;
 
   @media (min-width: $tablet-width) {
     width: 461px;
