--- a/source/sass/components/toolbar.scss
+++ b/source/sass/components/toolbar.scss
@@ -1,6 +1,6 @@
 .toolbar {
   width: 100%;
-  height: 111px;
+  min-height: 112px;
   position: absolute;
   bottom: -66px;
   left: 0;
@@ -8,12 +8,12 @@
   @media (min-width: $tablet-width) {
     height: 93px;
     position: absolute;
-    bottom: 0;
+    bottom: -20px;
   }
 }
 
 .toolbar__timeline {
-  min-height: 45px;
+  min-height: 44px;
   min-width: 280px;
   background-color: $black;
   opacity: 60%;
