--- a/source/sass/components/user-message.scss
+++ b/source/sass/components/user-message.scss
@@ -5,7 +5,7 @@
 }
 
 .user-message__textarea {
-  width: 100%;
+  width: 93%;
   height: 160px;
   margin-bottom: 48px;
   padding-top: 13px;
@@ -34,6 +34,8 @@
 }
 
 .user-message__text {
+  // padding-left: 10px;
+
   @media (min-width: $tablet-width) {
     width: 400px;
   }
