--- a/source/sass/components/user-visited.scss
+++ b/source/sass/components/user-visited.scss
@@ -12,7 +12,7 @@
 // }
 
 .user-visited__text {
-  padding-left: 58px;
+  padding-left: 0;
 
   @media (min-width: $tablet-width) {
     position: relative;
