--- a/source/sass/components/user-contacts.scss
+++ b/source/sass/components/user-contacts.scss
@@ -37,7 +37,7 @@
 }
 
 .user-contacts__input {
-  width: 93%;
+  width: 100%;
   height: 58px;
   margin-top: 11px;
   padding-top: 18px;
@@ -86,7 +86,7 @@
   display: flex;
 
   position: absolute;
-  right: 18px;
+  right: 0;
   top: 26px;
 
   @media (min-width: $tablet-width) {
