--- a/source/sass/layout/form.scss
+++ b/source/sass/layout/form.scss
@@ -1,7 +1,6 @@
 .form {
-  display: grid;
-
   @media (min-width: $tablet-width) {
+    display: grid;
     grid-template-columns: 1fr 1fr;
   }
 }
@@ -161,7 +160,6 @@
   line-height: 26px;
   text-transform: uppercase;
   text-align: center;
-  padding-left: 20px;
 
   @media (min-width: $tablet-width) {
     font-size: 21px;
@@ -212,8 +210,7 @@
   margin: 0;
   padding-top: 14px;
   padding-bottom: 17px;
-  padding-left: 70px;
-  text-align: left;
+  text-align: center;
 
   @media (min-width: $tablet-width) {
     text-align: left;
@@ -228,6 +225,8 @@
 }
 
 .form__user-opinion .form__subtitle {
+  text-align: center;
+
   @media (min-width: $tablet-width) {
     text-align: left;
   }
