--- a/source/sass/components/user-contacts.scss
+++ b/source/sass/components/user-contacts.scss
@@ -59,6 +59,20 @@
     opacity: 1;
   }
 
+  &:hover {
+    background-color: $gray5;
+  }
+
+  &:focus {
+    background-color: $white;
+    border: 4px solid $gray5;
+  }
+
+  &:active {
+    background-color: $white;
+    border: 4px solid $gray5;
+  }
+
   @media (min-width: $tablet-width) {
     width: 100%;
   }
