--- a/source/sass/components/user-message.scss
+++ b/source/sass/components/user-message.scss
@@ -25,6 +25,20 @@
     opacity: 1;
   }
 
+  &:hover {
+    background-color: $gray5;
+  }
+
+  &:focus {
+    background-color: $white;
+    border: 4px solid $gray5;
+  }
+
+  &:active {
+    background-color: $white;
+    border: 4px solid $gray5;
+  }
+
   @media (min-width: $tablet-width) {
     width: 100%;
     margin-bottom: 54px;
