--- a/source/sass/components/user-info.scss
+++ b/source/sass/components/user-info.scss
@@ -10,6 +10,7 @@
   @media (min-width: $tablet-width) {
     text-align: right;
     padding-top: 33px;
+    border-left: 1px solid $gray2;
   }
 }
 
