fix dexor plank

--- a/source/sass/layout/form.scss
+++ b/source/sass/layout/form.scss
@@ -216,6 +216,7 @@
     text-align: left;
     padding-left: 55px;
     padding-top: 41px;
+    border-left: 1px solid $gray2;
   }
 
   @media (min-width: $desktop-width) {
